perf: 基于tencent修改，后面维护Alibaba